feat: Move accessibility controls below Stats & Logs for better visibility
- Relocate Dark Mode toggle and High Contrast button from sidebar footer
- Add new .sidebar-accessibility section with elegant divider
- Position controls below Stats & Logs nav item (always visible)
- Add gradient divider for visual separation
- Keep sidebar footer as spacer at bottom

--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         </button>
       </li>
     </ul>
-    <div class="sidebar-footer">
+    <div class="sidebar-accessibility">
+      <div class="accessibility-divider"></div>
       <label class="toggle">
         <span class="nav-icon" aria-hidden="true">🌙</span>
         Dark Mode
