--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
   <!-- SIDEBAR NAVIGATION -->
-  <nav id="sidebar" role="navigation" aria-label="Main navigation">
+  <nav id="sidebar" role="navigation" aria-label="Main navigation" tabindex="-1">
     <div class="sidebar-header">
       <h2>🎬 AI Auto Bot</h2>
       <!-- Account Switcher -->
@@ -113,7 +113,7 @@
   </nav>
 
   <!-- MAIN CONTENT AREA -->
-  <main class="main-content" id="main-content" role="main">
+  <main class="main-content" id="main-content" role="main" tabindex="-1">
     <div class="container">
 
       <!-- SECTION: GENERATE -->
